<resources>
    <string name="app_name">Tasks</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_user_name">Please enter your user name</string>
    <string name="please_enter_password">Please enter your password</string>
    <string name="success">Success</string>
    <string name="ok">OK</string>
    <string name="splash_screen">Splash Image</string>
    <string name="please_wait">Please wait</string>
    <string name="select_your_language">Select your language</string>
    <string name="powered_by">Powered by</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password</string>
    <string name="gama_logo">Gama Logo</string>
    <string name="language_country_flag">Language country flag</string>
    <string name="moh_logo">MOH Logo</string>
    <string name="error">Error</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="language_flag">Language Flag</string>
    <string name="login_fail">Login Failed, Please check your user name and password and try again</string>
    <string name="service_error">Error fetch services, Please try again later</string>
    <string name="loading">Loading...</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="owner">Owner</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="is_open">Is open?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="projects">Projects</string>
    <string name="services">Services</string>
    <string name="tasks">Tasks</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="all">All</string>
    <string name="filter_projects">Filter projects</string>
    <string name="no_data">No Data</string>
    <string name="logo">Logo</string>
    <string name="owners">Owner(s)</string>
    <string name="actions">Actions</string>
    <string name="task">Task</string>
    <string name="checkIn">Check In</string>
    <string name="checkOut">Check Out</string>
    <string name="my_tasks">My Tasks</string>
    <string name="my_current_task">My Current Task</string>
</resources>
