<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/v_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/white"/>

            <ProgressBar
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/v_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="8dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/moh_logo"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/imgLogo"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/select_your_language"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

            <ImageView
                android:id="@+id/imgLang"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:contentDescription="@string/language_country_flag"
                android:src="@drawable/ic_usa_flag"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/etUserName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableLeft="@drawable/ic_account_circle"
                    android:drawablePadding="4dp"
                    android:drawableStart="@drawable/ic_account_circle"
                    android:gravity="start"
                    android:hint="@string/user_name"
                    android:inputType="textEmailAddress"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textColorHint="@color/alpha_white"
                    android:theme="@style/AppTheme.Login"
                    tools:ignore="UnusedAttribute"/>

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableLeft="@drawable/ic_security"
                    android:drawablePadding="4dp"
                    android:drawableStart="@drawable/ic_security"
                    android:gravity="start"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textColorHint="@color/alpha_white"

                    android:theme="@style/AppTheme.Login"
                    tools:ignore="UnusedAttribute"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnLogin"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/login"


                        android:textStyle="bold"
                        tools:ignore="ButtonStyle,UnusedAttribute"/>

                    <Button
                        android:id="@+id/btnForgetPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@color/transparent"
                        android:text="@string/forget_password"


                        android:textColor="@color/white"
                        android:textStyle="bold"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPoweredBy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/powered_by"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/imgGamaLogo"
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:contentDescription="@string/gama_logo"
                    android:focusable="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_gama_logo"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>


</ScrollView>